[package]
name    = "swc_plugin_dbg"
version = { workspace = true }
edition = { workspace = true }

[workspace]
members = [
    ".",
    "transform",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde                       = "1"
serde_json                  = "1.0.140"
swc_core                    = "16.10.*"
swc_common                  = "8.0.*"
swc_ecma_parser             = "11.0.0"
swc_ecma_transforms_testing = "12.0.0"
testing                     = "5.0.0"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
swc_common = { workspace = true }
swc_core   = { workspace = true, features = ["ecma_plugin_transform"] }
swc_dbg    = { path = "./transform" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
strip = 'symbols'

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
